Added Rest Api Product Controller

--- a/RestAPIDemo/appsettings.json
+++ b/RestAPIDemo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=LAPTOP-B4ECGTEI;Database=ef_store_demo;Trusted_Connection=true"
+    "Default": "Server=LAPTOP-B4ECGTEI;Database=rest_api_demo;Trusted_Connection=true"
   },
   "Logging": {
     "LogLevel": {
